express/blocks/holiday-blade/holiday-blade.css
main .section.section-wrapper.grid-marquee-ratings-container.holiday-blade-container {
    display: flex;
    flex-direction: column-reverse;
}

main .section> .holiday-blade {
    max-width: 100%;
    width: 100%;
    height: 100px;
    z-index: 6;
    position: relative;
    top: 0;
    overflow: hidden;
    --text-color: black;
}

main .holiday-blade.light {
    --text-color: white;
    color: var(--text-color)
}

main .holiday-blade video {
    position: absolute;
    top: 0;
    left: 0;
    object-fit: cover;
    height: 100%;
    width: 100vw;
    z-index: -1;
    pointer-events: none;
}

main .holiday-blade>div {
    z-index: 3;
    position: relative;
}


main .holiday-blade>div h4 {
    text-align: left;
    font-size: var(--body-font-size-m);
}

main .holiday-blade .toggle-bar a {
    position: relative;
    top: -2.5px;
    display: inline;
    color: var(--text-color);
    text-decoration: underline;
}
main .holiday-blade .toggle-bar .icon {
  position: relative;
  top: -2px
    
}
main .holiday-blade.light .toggle-bar .icon {
    filter: invert(100)

}

main .holiday-blade .toggle-bar p:first-of-type{
    display: none;
}

main .holiday-blade .toggle-button-chev {
    cursor: pointer;
    display: block;
    float: left;
    width: 32px;
    height: 32px;
    margin: 10px 7px;
    background: var(--color-white);
    box-shadow: 0 4px 8px 2px rgba(102, 102, 102, 0.1);
    border-radius: 50%;
    pointer-events: auto;
    border: none;
    transform: none;
    position: absolute;
    right: 0;
    top: 0;
}

main .holiday-blade.expanded .toggle-button-chev::before {
    transform: rotate(-45deg);
    top: 1.5px;
}

main .holiday-blade .toggle-button-chev::before {
    content: '';
    position: absolute;
    margin-top: 11px;
    width: 8px;
    height: 8px;
    left: 10.5px;
    top: -1.5px;
    border-top: solid 2px var(--color-gray-700);
    border-right: solid 2px var(--color-gray-700);
    transform: rotate(135deg);
}



main .holiday-blade.expanded .toggle-button-chev {
    transform: rotate(-135deg);
    transform: none;
    z-index: 10;
}

main .holiday-blade .toggle-bar {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    gap: 16px;
    font-size: 18px;
    height: 24px;
    padding: 12px;
    margin-right: 50px;

}

main .holiday-blade div div>* {
    margin: 0;
    margin-right: auto;
}


main .holiday-blade.expanded {
    height: 390px;
    overflow: unset;
}

main .holiday-blade .carousel-container {
    position: relative;
    top: 60px;
}

main .holiday-blade .template .still-wrapper .image-wrapper {
    position: relative;
}

main .holiday-blade .template .media-wrapper img:first-of-type,
main .holiday-blade .template .still-wrapper .image-wrapper img:first-of-type {
    height: 200px;
    width: auto;
    pointer-events: none;
    margin: 0 auto;
    object-fit: cover;
    display: block;
    border-radius: 16px;
}

main .holiday-blade .still-wrapper .image-wrapper .media-type-icon {
    position: absolute;
    width: 20px;
    height: 20px;
    background-color: white;
    bottom: 8px;
    left: 8px;
    border-radius: 50%;
    box-shadow: 0 0 5px #00000033;
    transition: transform .3s ease-in-out;
    will-change: transform;
}

main .holiday-blade .still-wrapper .image-wrapper .free-tag {
    position: absolute;
    height: 24px;
    display: flex;
    border-radius: 1000px;
    align-items: center;
    font-weight: 500;
    width: max-content;
    top: 8px;
    right: 8px;
    color: var(--color-white);
    font-size: 12px;
    line-height: 16px;
    padding: 0 12px;
    background: #000000B3;
}


main .holiday-blade .template {
    position: relative;
    height: 200px;
    display: inline-flex;
    width: auto;
    margin: 24px 11px 18px 11px;
}

main .holiday-blade .button-container:focus-within {
    visibility: visible;
    opacity: 20 !important;
}

main .holiday-blade .button-container {
    position: absolute;
    border-radius: 16px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
    text-align: center;
    transition: opacity .3s ease-in-out;
    will-change: opacity;
    border-radius: 12px;
    min-height: unset;
    box-sizing: border-box;
    height: calc(100% + 60px);
    width: calc(100% + 24px);
    opacity: 0;
    background-color: white;
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    justify-content: space-between;
    padding: 16px 8px 8px 8px;
    box-shadow: 0 0 6px #00000029;
}

main .holiday-blade .template .button-container:hover {
    z-index: 99;
}

main .holiday-blade .template:hover:not(.placeholder) .button-container {
    opacity: 1;
    pointer-events: initial;
    z-index: 2;
}

main .holiday-blade .template .button-container .media-wrapper {
    position: relative;
    height: 100%;
    flex-basis: 100%;
    width: 100%;
}

main .holiday-blade .template .button-container a.button {
    max-width: 100%;
    margin: 6px 6px 0;
    box-sizing: border-box;
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    min-height: 16px;
}

main .holiday-blade .template .button-container a.cta-link {
    display: block;
    width: 100%;
    height: calc(100% - 34px);
    white-space: nowrap;
    font-weight: var(--body-font-weight);
}

main .holiday-blade .template .button-container .media-wrapper .icon-share-arrow {
    cursor: pointer;
    pointer-events: auto;
    width: 12px;
    height: 12px;
    padding: 4px;
    background-color: white;
    overflow: visible;
}

main .holiday-blade .template .button-container .media-wrapper .share-icon-wrapper {
    position: absolute;
    top: 8px;
    right: 8px;
    border-radius: 50%;
    height: 20px;
}

main .holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip {
    visibility: hidden;
    position: absolute;
    display: flex;
    align-items: center;
    gap: 4px;
    width: 130px;
    background-color: #33AB84;
    color: white;
    text-align: center;
    border-radius: 6px;
    padding: 6px;
    top: 50%;
    transform: translateY(-50%);
    left: calc(100% + 12px);
    font-size: var(--body-font-size-s);
}

main .holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip .icon-checkmark-green {
    width: 10px;
    height: 10px;
    border-radius: 30px;
    background-color: var(--color-white);
    padding: 2px;
}


main .holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip.flipped {
    left: unset;
    right: calc(100% + 12px);
}

main .holiday-blade.template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip::after {
    content: " ";
    position: absolute;
    top: 50%;
    right: 100%;
    margin-top: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent #33AB84 transparent transparent;
}

main .holiday-blade .template:nth-last-of-type(2) .button-container .media-wrapper .share-icon-wrapper .shared-tooltip::after {
    right: unset;
    left: 100%;
    border-color: transparent transparent transparent #33AB84;
}

main .holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip.flipped::after {
    right: unset;
    left: 100%;
    transform: rotate(180deg);
}


main .holiday-blade .carousel {
    height: 200px;
}

main .holiday-blade .carousel-container .carousel-platform {
    height: 200px;
    padding-bottom: 30px;
    padding-top: 30px;
}


@media screen and (min-width: 768px) and (max-width: 1279px) {
    main .section>.holiday-blade {
        max-width: 100%;
        height: 100px;
        z-index: 6;
        position: relative;
        overflow: hidden;
        width: 1200px;
    }

    main .holiday-blade div div>* {
        margin: unset;
    }

    main .holiday-blade .toggle-bar > p:first-of-type {
        display: block;
        width: 1200px;
    }

    main .holiday-blade.expanded {
        height: 350px;
        overflow: unset;
    }

    main .holiday-blade .carousel-container {
        position: relative;
        top: 30px;
    }
}

@media screen and (min-width: 1280px) {
    main .section>.holiday-blade {
        max-width: 100%;
        width: 100%;
        height: 48px;
        z-index: 6;
        position: relative;
        overflow: hidden;
        width: 100%;
    }

    main .holiday-blade .toggle-bar p:first-of-type {
        display: block;
        width: initial;
    } 

    main .holiday-blade div div>* {
        margin: unset;
    }

    main .holiday-blade.expanded {
        height: 350px;
        overflow: unset;
    }

    main .holiday-blade .carousel-container {
        position: relative;
        top: 0;
    }

}




.holiday-blade .template .button-container .media-wrapper .share-icon-wrapper {
    position: absolute;
    top: 8px;
    right: 8px;
    border-radius: 50%;
    height: 20px;
}

.holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip {
    visibility: hidden;
    position: absolute;
    display: flex;
    align-items: center;
    gap: 4px;
    width: 130px;
    background-color: #33AB84;
    color: white;
    text-align: center;
    border-radius: 6px;
    padding: 6px;
    top: 50%;
    transform: translateY(-50%);
    left: calc(100% + 12px);
    font-size: var(--body-font-size-s);
}

.holiday-blade.horizontal .template:nth-last-of-type(2) .button-container .media-wrapper .share-icon-wrapper .shared-tooltip {
    left: unset;
    right: calc(100% + 12px);
}

.holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip .icon-checkmark-green {
    width: 10px;
    height: 10px;
    border-radius: 30px;
    background-color: var(--color-white);
    padding: 2px;
}

.holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip.display-tooltip {
    visibility: visible;
}

.holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip.flipped {
    left: unset;
    right: calc(100% + 12px);
}

.holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip::after {
    content: " ";
    position: absolute;
    top: 50%;
    right: 100%;
    margin-top: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent #33AB84 transparent transparent;
}

.holiday-blade.horizontal .template:nth-last-of-type(2) .button-container .media-wrapper .share-icon-wrapper .shared-tooltip::after {
    right: unset;
    left: 100%;
    border-color: transparent transparent transparent #33AB84;
}

.holiday-blade .template .button-container .media-wrapper .share-icon-wrapper .shared-tooltip.flipped::after {
    right: unset;
    left: 100%;
    transform: rotate(180deg);
}

